# Portfolio-29-6

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .prettierrc  CONTRIBUTORS.txt  LICENSE.txt  README.md  TODO.md  UTILS.md  docker-compose.yml  project.sh  run.sh
backend/: Dockerfile  config.py  entrypoint.py  entrypoint.sh  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
backend/blogs/: admin.py  models.py
backend/blogs/api/: routers.py  serializers.py  views.py
backend/blogs/migrations/: 0001_initial.py
backend/code_snippets/: admin.py  apps.py  models.py
backend/code_snippets/api/: routers.py  serializers.py  views.py
backend/code_snippets/migrations/: 0001_initial.py
backend/others/: admin.py  apps.py  models.py
backend/others/api/: routers.py  serializers.py  views.py
backend/others/migrations/: 0001_initial.py
backend/portfolios/: admin.py  models.py
backend/portfolios/migrations/: 0001_initial.py  0002_alter_professionalexperience_description_and_more.py  0003_alter_interest_order_alter_project_order_and_more.py  0004_alter_interest_order_alter_project_order_and_more.py  0005_alter_project_technology.py  0006_professionalexperience_job_location_type_and_more.py  0007_alter_movie_rating.py
backend/project/: api_router.py  asgi.py  router.py  urls.py  views.py  wsgi.py
backend/project/settings/: base.py  development.py  production.py  settings_all.py
backend/users/: admin.py  models.py
backend/users/api/: routers.py  (+2 more)
backend/utils/: decorators.py  helpers.py  image_upload_helpers.py  mixins.py  snippets.py
(+132 files in other folders)
